Fixed overflow of buttons

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,7 +32,7 @@ a {
 
 .wallet-adapter-button {
   background: #5B21B6 !important;
-  width: 10rem;
+  width: 14rem;
   height: 4rem;
   border-radius: 5px;
   display: flex;
